--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_subdirectory(constant-propagation)
+# add_subdirectory(constant-propagation)
 add_subdirectory(filepolicy)
-add_subdirectory(futurefunctions)
+# add_subdirectory(futurefunctions)
 
